--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,4 +1,4 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap-grid.min.css');
+// @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap-grid.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500&family=Noto+Sans:wght@400;700&display=swap');
 
 .pasja {
