--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -11,7 +11,15 @@
   align-items: center;
   justify-content: center;
 
-  &--popup {
+  &--grid {
+    inset: 0;
+    background-color: rgba(#000, 0.4);
+  }
+
+  &--align {
+    top: 0;
+    left: 0;
+    background-color: transparent;
   }
 
   &__button {
