--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -17,9 +17,14 @@
   }
 
   &--align {
+    width: 140px;
     top: 0;
     left: 0;
-    background-color: transparent;
+
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 4px 34px rgba(0, 0, 0, 0.25);
+    transform: translateX(-50%);
   }
 
   &__button {
